# ENZT2019

./: .gitignore  README.md  README.rst  setup.cfg
src/enzt2019/: __init__.py
src/enzt2019/bel/: BioCur.bel  Combined_NFKB_Therapeutic Effects on AD and MS_25032019  ExtractTriples2.ipynb  Genes.txt  NF-kB in AD and MS  NF-kB in AD and MS.bel  NF-kappa B therapeutic_2503_internship.bel  NFKB_Therapeutic Effects on AD and MS_25032019.bel  NFkBTriples.txt  Pathma-NF-kappa B therapeutic.bel  VS_bel_template_2503_internship paper.bel  __init__.py  __main__.py  bel_template_2503_internship Insulin Asisa Alessandra.bel  bel_template_2503_internship paper.bel  bel_template_2503_internship_NFKB_25032019.bel  bel_template_insulin_paper.bel  repo.py  yang2018.bel
