##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = enzt2019
version = 0.0.1-dev
long_description = file: README.rst

[options]
python_requires = >=3.6
install_requires =
    bel_repository

# Random options
zip-safe = false
include-package-data = true

# Where is my code?
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    enzt2019-knowledge = enzt2019.bel.repo:main
